button spacing on mobile fixes

--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -3,5 +3,6 @@ $secondary-color: #ffbb00;
 $background-color: black;
 $text-color: #fff;
 $tablet-width: 650px;
-$larger-mobile-width: 360px;
 $small-tablet-width: 430px;
+$small-mobile-width: 325px;
+$larger-mobile-width: 360px;
